--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,19 @@
         android:theme="@style/Theme.FNC_App"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
-            android:exported="true">
+            android:name=".HomeFragment"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".UserFragment"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".UserActivity"
-            android:exported="false" />
         <activity
             android:name=".SignupActivity"
             android:exported="false">
